# MedorCoin-Blockchain

./: .clang-format  .env  .env.example  .gitignore  .invoice..html  <img src="6B9C31D6-7FD3-4355-BE5B-B2A9ED90B7BE.png">  CMakeLists.txt  CNAME  CheckList.txt  CheckLists.txt  Dockerfile  ETH-payment.html  FUNDING.yml  Fs.sh  LICENSE  MedorCoinProfessionalLocker.sol  README.md  SECURITY.md  abi.cjs  about-us.html  account.html  ads.txt  api-signup.html  apiCompliance.js  api_server.cpp  apt.txt  asset-lock.html  auth_service.cjs  basic-buy-now.html  binding.gyp  block.cjs  blockchain.html  bnb-payment.html  bnb.html  btc-payment.html  btc.html  build.sh  certificate-generator.html  chainid-2757.js  chainid-8888.js  (+123 more)
.github/: FINDING.yml  FUNDING.yml
.github/workflows/: Docker  auto-readme.yml  ci.yml  docker.yml
CMakeLists.txt/: G
CheckList.txt/: CheckLists.txt
buil/: CMakeCache.txt
buld/: Makefile  build_version.cc
buld/src/: Makefile
config/: genesis_block.js  network_peers.json  node_config.json
contracts/: Counter.sol  MedorCoinProfessionalLocker.sol  MedorCoinServiceHub.sol  MedorToken.sol
docs/: protocol_spec.md
etc/nginx/sites-available/: medorcoin.invisible-m.com.conf
frontend/: apiCompliance.js  combined_api_portal.html  login.html  myapis.html  verify.html
include/: abi.h  accountdb.h  api.h  api_key_manager.h  async_logger.h  auth.h  bip39.h  block.h  block_builder.h  blockchain.h  blockchain_fork.h  blockdb.h  bloom_utils.h  bytecode.h  config.h  connection_pool.h  crypto.h  evm_executor.h  evm_sign.h  execute.h  feehelper.h  host.h  main.h  mempool.h  merkle.h  message_codec.h  miner.h  network.h  poa_sign.h  proof_of_work.h  rate_limiter.h  receipt.h  recovery.h  rlp.h  rocksdb_wrapper.h  rpc_handlers.h  rpc_server.h  serialization.h  server.h  signature_helpers.h  (+8 more)
include/consensus/: validator_registry.h
include/db/: blockdb.h  rocksdb_wrapper.h
include/keccak/: keccak.h
include/mempool/: mempool.h
include/net/: message_handler.h  net_manager.h  node_identity.h  p2p_node.  p2p_node.h  peer_manager.h  peer_store.h  serialization.h
include/net/include/net/: peer_manager.h
js/: lock-logic.js
middleware/: auth.cjs
models/: User.js
monitoring/: grafana_dashboard.json  metrics.yaml
monitoring/rules/: medorcoin_alerts.yml
node/services/: db_service.cjs
post/api/auth/: login  me  register
routes/: auth.js  auth.routes.js  crypto.js  mining.js  payments.js  rpc.cjs  signup.cjs  twofa.js
scripts/: deploy.js  log_manager.sh  relayer.cjs  reset_chain.sh.​​​​​​​​​​​​​​​​  stop_node.sh
services/: relayer.cjs
site/: blockchain.html  docs.html  index.html  learners.html  miners.html
src/: CMakeLists.txt  api.cpp  api_key_manager.cpp  api_swap.cpp  async_logger.cpp  auth.cpp  bindings.gyp  bip39.cpp  block.cpp  block.h  blockchain.cpp  blockchain.h  blockchain_fork.cpp  blockchain_receipts.cpp  config.h  connection_pool.cpp  consensus.cpp  consensus.h  convert_medor_to_btc.cpp  convert_medor_to_eth.cpp  convert_medor_to_usdt.cpp  evm_executor.cpp  evm_tx.h  main.cpp  medorcoin_addon.cpp  mempool.cpp  mempool.h  merkle.cpp  message_codec.cpp  miner.cpp  miner.h  network.cpp  network.h  node_addon.cpp  proof_of_work.cpp  rate_limiter.cpp  receipt.cpp  receipt.h  rpc_handlers.cpp  rpc_handlers.h  (+13 more)
src/abi/: abi.cpp  abi.h  encode.cpp  encode.h
src/consensus/: poa_sign.cpp  validator_registry.cpp
src/crypto/: evm_sign.cpp  evm_sign.h  keccak256.cpp  keccak256.h  rlp.cpp  rlp.h  secp256k1_wrapper.cpp  secp256k1_wrapper.h  signature.cpp  signature.cpp.save  signature.h  signature_helpers.cpp  signature_helpers.h  verify_signature.cpp  verify_signature.h
src/crypto/keccak/: keccak.c  keccak.cpp  keccak256.cpp  keccak256.h
src/db/: accountdb.cpp  blockdb.cpp  rocksdb_wrapper.cpp
src/evm/: execute.cpp  execute.h  host.cpp  storage.cpp  tx.cpp
src/fees/: feehelper.cpp
src/mempool/: mempool.cpp
src/net/: message_handler.cpp  net_manager.cpp  node_identity.cpp  p2p_node.cpp  peer_manager.cpp  peer_store.cpp  serialization.cpp  sync_manager.cpp  sync_manager.h
src/node/: block_builder.cpp
tests/: test_block.cpp  test_blockchain.cpp  test_network.cpp  test_rpc.cpp  test_transaction.cpp  test_utxo.cpp
tests/tests/: test_network.cpp
